--- a/skyfolk/static/css/widget1.css
+++ b/skyfolk/static/css/widget1.css
@@ -1,11 +1,33 @@
-.profile:not(:hover) {
+/*
+
+ HTML
+
+ {% if request.user.profile.image %}
+      <nav class="profile" style="background-image: url('{{request.user.profile.image.url}}');">
+      <li class="fa fa-paper-plane fa-2x" id="publish2"></li>
+      <li class="fa fa-home fa-2x" onclick="javascript:location.href='/'"></li>
+      <li class="fa fa-users fa-2x" onclick="javascript:location.href='/friends'"></li>
+      <li class="fa fa-sign-out fa-2x" onclick="javascript:location.href='{% url 'account_logout' %}'"></li>
+    </nav>
+{% else %}
+      <nav class="profile" style="background-image: url('{{STATIC_URL}}img/generic-avatar.png');">
+      <li class="fa fa-paper-plane fa-2x" id="publish2"></li>
+      <li class="fa fa-home fa-2x" onclick="javascript:location.href='/'"></li>
+      <li class="fa fa-users fa-2x" onclick="javascript:location.href='/friends'"></li>
+      <li class="fa fa-sign-out fa-2x" onclick="javascript:location.href='{% url 'account_logout' %}'"></li>
+    </nav>
+{% endif %}
+
+
+.profile {
   color: rgba(44,44,44,0.888);
   width: 105px;
   height: 105px;
   position: fixed;
+    display: none;
   background-color: white;
-  right: 1%;
-  bottom: 2%;
+  left: 2%;
+  top: 5%;
   border-radius: 100%;
   background-position: center;
   background-size: 105px 105px !important;
@@ -25,8 +47,8 @@
   height: 105px;
   position: fixed;
   background-color: white;
-  right: 1%;
-  bottom: 2%;
+  left: 2%;
+  top: 5%;
   border-radius: 100%;
   background-position:center;
   background-size: 105px 105px !important;
@@ -108,3 +130,4 @@
     display: none;
   }
 }
+*/
