--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -163,9 +163,17 @@ top.window.outerWidth = screen.availWidth;
   </form>
   <!-- Logotipo que re-direcciona a la pagina principal -->
   <li>
-  <div class="logotipo_skyfolk" onclick="javascript:window.location.href='/'">
-
-  </div>
+  <nav class="logotipo_skyfolk">
+       {% if request.user.profile.image %}
+      <li class="profile-user"><img src="{{request.user.profile.image.url}}"></li>
+      {% else %}
+           <li class="profile-user" style="background-image: url('{{STATIC_URL}}img/generic-avatar.png');"></li>
+      {% endif %}
+          <li class="fa fa-paper-plane fa-2x" id="publish2"></li>
+      <li class="fa fa-home fa-2x" onclick="javascript:location.href='/'"></li>
+      <li class="fa fa-users fa-2x" onclick="javascript:location.href='/friends'"></li>
+      <li class="fa fa-sign-out fa-2x" onclick="javascript:location.href='{% url 'account_logout' %}'"></li>
+  </nav>
   </li>
 
     </div>
@@ -184,21 +192,7 @@ top.window.outerWidth = screen.availWidth;
     {% endif %}
 <!-- Menu principal - circular -->
 
-{% if request.user.profile.image %}
-      <nav class="profile" style="background-image: url('{{request.user.profile.image.url}}');">
-      <li class="fa fa-paper-plane fa-2x" id="publish2"></li>
-      <li class="fa fa-home fa-2x" onclick="javascript:location.href='/'"></li>
-      <li class="fa fa-users fa-2x" onclick="javascript:location.href='/friends'"></li>
-      <li class="fa fa-sign-out fa-2x" onclick="javascript:location.href='{% url 'account_logout' %}'"></li>
-    </nav>
-{% else %}
-      <nav class="profile" style="background-image: url('{{STATIC_URL}}img/generic-avatar.png');">
-      <li class="fa fa-paper-plane fa-2x" id="publish2"></li>
-      <li class="fa fa-home fa-2x" onclick="javascript:location.href='/'"></li>
-      <li class="fa fa-users fa-2x" onclick="javascript:location.href='/friends'"></li>
-      <li class="fa fa-sign-out fa-2x" onclick="javascript:location.href='{% url 'account_logout' %}'"></li>
-    </nav>
-{% endif %}
+
 </nav>
 {% endblock %}
 {% block content %}{% endblock %}
