--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -123,7 +123,7 @@ top.window.outerWidth = screen.availWidth;
       {% if request.user.profile.image %}
         <li class="profilee"><img src="{{ request.user.profile.image.url }}"><i onclick="location.href='/profile/{{ request.user }}'">{{ request.user.username }}</i></li>
       {% else %}
-       <li class="profilee"><img src="{{STATIC_URL}}img/generic-avatar.png"><i>{{ request.user.username }}</i></li>
+       <li class="profilee"><img src="{{STATIC_URL}}img/generic-avatar.png"><i onclick="location.href='/profile/{{ request.user }}'">{{ request.user.username }}</i></li>
       {% endif %}
     <li onclick="location.href='/config/profile'"><i class="fa fa-cog fa-lg"></i> Configuracion </li>
     <li onclick="location.href='/messages/inbox/'"><i class="fa fa-inbox fa-lg"></i> Mensajes privados </li>
