--- a/skyfolk/static/css/buscar.css
+++ b/skyfolk/static/css/buscar.css
@@ -1,8 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Montserrat+Alternates);
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300);
-
-
-
 /*caja de busqueda*/
 .field>form input[type=text],
 .field>form button {
@@ -264,84 +259,87 @@
   animation-iteration-count: 3;
   animation-direction: alternate;
 }
-.logotipo_skyfolk:hover {
-    background: none;
-}
-.logotipo_skyfolk li:nth-child(1) {
-  list-style-type: none;
-  position: absolute;
-  visibility: hidden;
-  -webkit-transition: all 4s ease-in;
-  -moz-transition: all 4s ease-in;
-  transition: all 4s ease-in;
-  cursor:pointer;
-    width: 40px;
-    height: 40px;
-    background: none;
-  top: 0px;
-  }
-.logotipo_skyfolk li:nth-child(1) img {
-    width: 40px;
-    height: 40px;
-    position: relative;
-        -webkit-border-radius: 100%;
-    -moz-border-radius: 100%;
-    border-radius: 100%;
-}
-.logotipo_skyfolk li:nth-child(2) {
-  list-style-type: none;
-  position: absolute;
-  visibility: hidden;
-  -webkit-transition: all 4s ease-in;
-  -moz-transition: all 4s ease-in;
-  transition: all 4s ease-in;
-  cursor:pointer;
-  left: 70px;
-  top: 60px;
-  }
-.logotipo_skyfolk li:nth-child(3) {
-  list-style-type: none;
-  position: absolute;
-  visibility: hidden;;
-  -webkit-transition: all 4s ease-in;
-  -moz-transition: all 4s ease-in;
-  transition: all 4s ease-in;
-  cursor:pointer;
-    right: 60px;
-  top: 60px;
-}
-.logotipo_skyfolk li:nth-child(4) {
-  list-style-type: none;
-  position: absolute;
-  right: 130px;
-  visibility: hidden;
-  -webkit-transition: all 4s ease-in;
-  -moz-transition: all 4s ease-in;
-  transition: all 4s ease-in;
-  cursor:pointer;
-  top: 31px;
-}
-.logotipo_skyfolk li:nth-child(5) {
-  list-style-type: none;
-  position: absolute;
-  left: 120px;
-  visibility: hidden;
-  -webkit-transition: all 4s ease-in;
-  -moz-transition: all 4s ease-in;
-  transition: all 4s ease-in;
-  cursor:pointer;
-  top: 30px;
-}
 
-.logotipo_skyfolk:hover li {
+.fa-bars li:nth-child(1) {
+      list-style-type: none;
+      position: absolute;
+      visibility: hidden;
+      -webkit-transition: all 4s ease-in;
+      -moz-transition: all 4s ease-in;
+      transition: all 4s ease-in;
+      cursor:pointer;
+      background: none;
+      top: 0;
+      left: 50px;
+      font-size: 20px;
+  }
+
+.fa-bars li:nth-child(2) {
+      list-style-type: none;
+      position: absolute;
+      visibility: hidden;
+      -webkit-transition: all 4s ease-in;
+      -moz-transition: all 4s ease-in;
+      transition: all 4s ease-in;
+      cursor:pointer;
+      left: 100px;
+      top: 0;
+      font-size: 20px;
+  }
+.fa-bars li:nth-child(3) {
+      list-style-type: none;
+      position: absolute;
+      visibility: hidden;;
+      -webkit-transition: all 4s ease-in;
+      -moz-transition: all 4s ease-in;
+      transition: all 4s ease-in;
+      cursor:pointer;
+      left: 150px;
+      top: 0;
+    font-size: 20px;
+}
+.fa-bars li:nth-child(4) {
+      list-style-type: none;
+      position: absolute;
+      visibility: hidden;
+      -webkit-transition: all 4s ease-in;
+      -moz-transition: all 4s ease-in;
+      transition: all 4s ease-in;
+      cursor:pointer;
+      left: 200px;
+      top: 0;
+    font-size: 20px;
+}
+.fa-bars li:nth-child(5) {
+      list-style-type: none;
+      position: absolute;
+      left: 250px;
+      visibility: hidden;
+      -webkit-transition: all 4s ease-in;
+      -moz-transition: all 4s ease-in;
+      transition: all 4s ease-in;
+      cursor:pointer;
+      top: 30px;
+      width: 40px;
+      height: 40px;
+
+}
+.fa-bars li:nth-child(5) img {
+        width: 40px;
+        height:40px;
+       -webkit-border-radius: 100%;
+       -moz-border-radius: 100%;
+        border-radius: 100%;
+}
+.fa-bars:hover li {
   visibility: visible;
-  margin-top: 10px;
+  margin-left: 10px;
   transition: all .2s ease-in;
   -webkit-transition: all .2s ease-in;
   -moz-transition: all .2s ease-in;
 }
 
-.logotipo_skyfolk li:hover {
+.fa-bars li:hover {
   color: #1976d2;
   z-index: 9999;
 }
