--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -149,22 +149,22 @@ top.window.outerWidth = screen.availWidth;
   </form>
   <!-- Logotipo que re-direcciona a la pagina principal -->
   <li>
-  <nav class="logotipo_skyfolk">
-       {% if request.user.profile.image %}
-      <li class="profile-user"><img src="{{request.user.profile.image.url}}"></li>
-      {% else %}
-           <li class="profile-user" style="background-image: url('{{STATIC_URL}}img/generic-avatar.png');"></li>
-      {% endif %}
-          <li class="fa fa-paper-plane fa-2x" id="publish2"></li>
-      <li class="fa fa-home fa-2x" onclick="location.href='/'"></li>
-      <li class="fa fa-users fa-2x" onclick="location.href='/friends'"></li>
-      <li class="fa fa-sign-out fa-2x" onclick="location.href='{% url 'account_logout' %}'"></li>
+  <div class="logotipo_skyfolk" onclick="location.href='/'">
+    </div>
     </li>
 
     <li class="fa fa-comment fa-lg"></li>
     <li class="fa fa-bell fa-lg"><em onclick="contador()">{{n_likes}}</em></li>
     <ul class="fa fa-bars fa-lg">
-        <li></li>
+        <li class="fa fa-paper-plane fa-2x" id="publish2"></li>
+        <li class="fa fa-home fa-2x" onclick="location.href='/'"></li>
+        <li class="fa fa-users fa-2x" onclick="location.href='/friends/{{ request.user }}'"></li>
+        <li class="fa fa-sign-out fa-2x" onclick="location.href='{% url 'account_logout' %}'"></li>
+        {% if request.user.profile.image %}
+        <li class="profile-user"><img src="{{request.user.profile.image.url}}"></li>
+      {% else %}
+            <li class="profile-user" style="background-image: url('{{STATIC_URL}}img/generic-avatar.png');"></li>
+      {% endif %}
     </ul>
 
     {% if showPerfilButtons or user.username == user_profile.username %}
