--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -790,7 +790,7 @@
       </div>
 
         <div id="tab-amigos">
-
+            <input class="search-in-tab" type="search" placeholder="¿A quién buscas?" title="Search">
             <ul class="list-friends">
 
                 {% for item in friends_top12 %}
