--- a/skyfolk/static/css/buscar.css
+++ b/skyfolk/static/css/buscar.css
@@ -425,7 +425,26 @@
     display: none;
   }
 }
-
+    
+  /* Buscar en el tab-amigos */
+    .search-in-tab {
+        position: relative;
+        border: none;
+        width: 70%;
+        height: 30px;
+        margin: 10px 0 20px 15%;
+        padding-left: 20px;
+        font-family: 'Open Sans', sans-serif;
+        -webkit-transition: all .3s linear;
+        -moz-transition: all .3s linear;
+        transition: all .3s linear;
+        background: #eeeeee url('https://cdn3.iconfinder.com/data/icons/eightyshades/512/11_Search-128.png') no-repeat 95%;
+        background-size: 13px;
+    }
+    .search-in-tab:focus {
+        background: #fefefe url('https://cdn3.iconfinder.com/data/icons/eightyshades/512/11_Search-128.png') no-repeat 1%;
+        background-size: 13px;
+    }
 @media only screen and (min-width: 640px) and (max-width: 1080px) {
   .logotipo_skyfolk {
     left: 200px;
