--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -22,9 +22,10 @@ html, body {
     transition: all .1s linear;
 }
 
-.activex {
+.activex { /* Timeline */
   color: red;
 }
+
 .container {
   *zoom: 1;
   max-width: 1200px;
@@ -1110,7 +1111,8 @@ a {
 #tab-container .tab a {color:#404040;}      /* unvisited link */
 #tab-container .tab a:visited {color:#404040;}  /* visited link */
 
-#tab-container .tab.active { background: #FFFFFF; position: relative; }
+#tab-container .tab.active { background: #FFFFFF; position: relative; border-bottom: 1px solid #1e88e5;}
+#tab-container .tab.active > a { color: #1e88e5}
 #tab-container .tab:hover:not(.active) { background: #FAFAFA; }
 
 
@@ -1133,12 +1135,8 @@ a {
   position: relative;
   margin: auto;
   list-style-type: none;
-  /*overflow:auto !important;*/
-  /*overflow-y: scroll;*/
-  /*overflow: hidden;*/
-  /*overflow-y: hidden;*/
-
 }
+
 #hood-tabs{ overflow: hidden; -ms-overflow-style: none; }
 #hood-tabs::-webkit-scrollbar { display: none; }
 
@@ -1154,11 +1152,9 @@ a {
   width: 95%;
   color: #62C1BA;
   border: 1px solid #bad0dd;
-  font:1.2em 'Montserrat Alternates';
-
--webkit-box-shadow: 0px 0px 3px 1px rgba(183,182,224,1);
--moz-box-shadow: 0px 0px 3px 1px rgba(183,182,224,1);
-box-shadow: 0px 0px 3px 1px rgba(183,182,224,1);
+  -webkit-box-shadow: 0px 0px 3px 1px rgba(183,182,224,1);
+  -moz-box-shadow: 0px 0px 3px 1px rgba(183,182,224,1);
+  box-shadow: 0px 0px 3px 1px rgba(183,182,224,1);
 
 
 }
