--- a/skyfolk/templates/account/amigos.html
+++ b/skyfolk/templates/account/amigos.html
@@ -11,7 +11,7 @@
         <div class="col-lg-12">
             <div class="header">
                {% if item.user__profile__image and item.user__profile__image|file_exists %}
-                   <img class="back-profile-user" src="{{MEDIA_URL}}{{item.user__profile__image}}">
+                   <img class="back-profile-user" src="{{ MEDIA_URL }}{{ item.user__profile__backImage }}">
                    {% else %}
                    <img class="back-profile-user" src="{{ STATIC_URL }}img/6.jpg">
                 {% endif %}
@@ -19,9 +19,9 @@
                 </i>
                 <div class="bg-user">
                     {% if item.user__profile__backImage and item.user__profile__backImage|file_exists %}
-                        <img class="profile-user-bg" src="{{ MEDIA_URL }}{{ item.user__profile__backImage }}">
+                        <img class="profile-user-bg" src="{{MEDIA_URL}}{{item.user__profile__image}}">
                     {% else %}
-                        <img class="profile-user-bg" src="{{ STATIC_URL }}img/7.jpg">
+                        <img class="profile-user-bg" src="{{ STATIC_URL }}img/5.jpg">
                     {% endif %}
                 </div>
             </div>
