--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -662,9 +662,9 @@
 </div>
 
                 <article class="articulo">
-                  <h2 class="h22"><a href="/profile/{{ item.user__username }}" >{{item.user__username}}</a> mentioned you</h2>
+                  <h2 class="h22"><a href="/profile/{{ item.user__username }}" >{{ item.user__username }}</a> ha publicado:  </h2>
                   <div class="parrafo comment">
-                    <a target="_blank">{{item.from_publication__created}}</a><br>{{item.from_publication__content}}
+                    <a target="_blank">{{item.from_publication__created}}</a><br>{{ item.from_publication__content }}
                   </div>
               <!-- OPCIONES DE COMENTARIOS -->
                 <div class="optiones_comentarios">
@@ -674,10 +674,10 @@
                         {% elif user.username == user_profile.username %} <!-- Si estamos visitando nuestro propio perfil -->
                              <li><i class="fa fa-trash"></i></li>
                         {% endif %}
-                        {% if item.from_publication__mlikes != None and item.from_publication__mlikes != 0 %}
-                       <li><i class="fa fa-heart"></i> {{ item.from_publication__mlikes }} </li>
+                        {% if item.from_publication__mlikes > '0' %}
+                            <li><i class="fa fa-heart"></i> {{ item.from_publication__mlikes }} </li>
                         {% else %}
-                        <li><i class="fa fa-heart"></i></li>
+                            <li><i class="fa fa-heart"></i></li>
                         {% endif %}
                        <li><i class="fa fa-quote-left"></i></li>
                        <li><i class="fa fa-reply"></i></li>
