--- a/skyfolk/static/css/colorbox.css
+++ b/skyfolk/static/css/colorbox.css
@@ -209,7 +209,7 @@ section li {
 .btn li .all {
   padding: 10px 10px 10px 10px;
   font-family: 'Open Sans', sans-serif;
-  font-size: 200;
+  font-weight: 200;
   border: 1px solid transparent;
   background:#33cccc;
   color: white;
@@ -244,7 +244,7 @@ section li {
 .fontawesome-reorder , .fontawesome-table {
   padding: 10px 10px 10px 10px;
   font-family: 'Open Sans', sans-serif;
-  font-size: 200;
+  font-weight: 200;
   border: 1px solid transparent;
   background:#33cccc;
   color: white;
