--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -662,7 +662,7 @@
                 <article class="articulo">
                   <h2 class="h22"><a href="/profile/{{ item.user__username }}" >{{ item.user__username }}</a> ha publicado:  </h2>
                   <div class="parrafo comment">
-                    <a target="_blank">{{item.from_publication__created}}</a><br>{{ item.from_publication__content }}
+                    <a target="_blank">{{item.from_publication__created}}</a><br>{{ item.from_publication__content | safe }}
                   </div>
               <!-- OPCIONES DE COMENTARIOS -->
                 <div class="optiones_comentarios">
