--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -35,6 +35,10 @@ a, a:visited {
   margin-top: 20px;
   margin-bottom:12px;
 }
+.articulo img {
+  width: 20px;
+  height: 20px;
+}
 @media only screen and (max-width: 800px) {
   .articulo {
     width: 200px;
