--- a/skyfolk/templates/account/base_cf.html
+++ b/skyfolk/templates/account/base_cf.html
@@ -34,43 +34,39 @@
 
 {% block content %}
 
-    <div class="container">
-        <div class="col lg-12">
-        <nav class="menu-config">
-            <a class="perfil" onclick="window.location.href='/config/profile'"><i class="fa fa-user"></i><br>Perfil</a>
-            <a class="Contraseña" onclick="window.location.href='/accounts/password/change/'"><i class="fa fa-lock"></i><br>Contraseña</a>
-            <a onclick="window.location.href='/config/privacity'" class="Seguridad"><i class="fa fa-eye fa"></i><br>Privacidad</a>
-            <a class="Movil"><i class="fa fa-mobile"></i><br>Movil y correo</a>
-            <a class="widgets"><i class="fa fa-list-ul"></i><br>Widgets</a>
-            <a class="Diseño"><i class="fa fa-dashboard"></i><br>Diseño</a>
-            <a class="ban"><i class="fa fa-minus"></i><br>Lista negra</a>
-            <a onclick="window.location.href='/config/relations'" class="relaciones"><i class="fa fa-circle-thin fa"></i><br>Mis relaciones</a>
-        </nav>
-        </div>
-    <div class="col-lg-10">
-        <hgroup>
+  <div class="contenedor">
+  <hgroup>
 <span>
 	<h3 class="fontawesome-cog"><i class="fa fa-cog"></i> Configuracion</h3>
 	<h6>Configure, edite o cambie cualquier cosa de su perfil.</h6>
 </span>
-        </hgroup>
+  </hgroup>
+  <br>
+  <nav class="menu-config">
+      <a class="perfil" onclick="window.location.href='/config/profile'"><i class="fa fa-user"></i><br>Perfil</a>
+      <a class="Contraseña" onclick="window.location.href='/accounts/password/change/'"><i class="fa fa-lock"></i><br>Contraseña</a>
+      <a onclick="window.location.href='/config/privacity'" class="Seguridad"><i class="fa fa-eye fa"></i><br>Privacidad</a>
+      <a class="Movil"><i class="fa fa-mobile"></i><br>Movil y correo</a>
+      <a class="widgets"><i class="fa fa-list-ul"></i><br>Widgets</a>
+      <a class="Diseño"><i class="fa fa-dashboard"></i><br>Diseño</a>
+      <a class="ban"><i class="fa fa-minus"></i><br>Lista negra</a>
+      <a onclick="window.location.href='/config/relations'" class="relaciones"><i class="fa fa-circle-thin fa"></i><br>Mis relaciones</a>
+  </nav>
+      <div class="col-lg-12 col-sm-9">
+
+      <div class="col-lg-7 col-md-9 col-sm-8">
+      <div id="contra">
+      <li>
+      <form id="levi">
+      	{% block cf-title %}{% endblock %}
+
+      </form>
+      </li>
+          {% block cf-form %}{% endblock %}
+
+      </div>
+      </div>
+      </div>
     </div>
 
-    <div class="col-lg-12 col-sm-9">
-
-
-    <div class="col-lg-7 col-md-9 col-sm-8">
-    <div id="contra">
-    <li>
-    <form id="levi">
-    	{% block cf-title %}{% endblock %}
-
-    </form>
-    </li>
-        {% block cf-form %}{% endblock %}
-
-    </div>
-    </div>
-    </div>
-    </div>
 {% endblock%}
