--- a/skyfolk/templates/account/search.html
+++ b/skyfolk/templates/account/search.html
@@ -77,7 +77,7 @@
   <div class="col s12">
   <ul class="informacion">
     {% if item.first_name %}
-    <li class="nombre grey-text text-darken-2">{{item.first_name}} {{item.last_name}}</li>
+    <li class="nombre grey-text text-darken-2">{{item.first_name}} <br> {{item.last_name}}</li>
     <li class="apodo blue-text text-darken-2">{{ item.username }}</li>
     {% else %}
     <li class="nombre grey-text text-darken-2"><br></li>
