ventanas en pines

--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -470,6 +470,7 @@ body > .container {
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
   margin-bottom: 1em; }
 
+/* Ventana para las opciones de cada pin */ 
 .user-card .ventana-pin {
   width: 100%;
   height: auto;
