--- a/skyfolk/templates/account/amigos.html
+++ b/skyfolk/templates/account/amigos.html
@@ -29,7 +29,7 @@
         <div class="col-lg-12">
             <div class="name-friend">
             <p>{{ item.user__username }}</p><br>
-                <p>{{ item.user__first_name }}</p>
+                <p>{{ item.user__first_name }} {{item.user__last_name}}</p>
             </div>
 
         </div>
@@ -41,7 +41,7 @@
 
 
 
-<center><img id="loader-ajax" src="{{STATIC_URL}}img/b.gif"></center>
+<center><img id="loader-ajax" src="{{STATIC_URL}}img/loading.gif"></center>
 
 <center><button id="button-more-friends" type="button" onclick="AJAX_loadFriends()">More!</button></center>
 
