--- a/skyfolk/templates/account/cf-profile.html
+++ b/skyfolk/templates/account/cf-profile.html
@@ -22,7 +22,7 @@
 	{% if user_profile.profile.image %}
 	<img src="{{user_profile.profile.image.url}}" class="img-circle">
 	{% else %}
-	<img src="{{STATIC_URL}}img/generic-avatar.png" class="img-circle">
+	<img src="{{STATIC_URL}}img/nuevo.png" class="img-circle">
 	{% endif %}
 		{{ user_form }}
 	</div>
