--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -47,7 +47,7 @@
   {% if user.username == user_profile.username %}
   <style type="text/css">
     .user-card:hover .ventana-pin {
-      display: block
+      display: block;
     }
   </style>
   {% endif %}
