--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -650,6 +650,7 @@
                     <a target="_blank">{{item.from_publication__created}}</a><br><br>
                     {{ item.from_publication__content | safe }}
                   </div>
+                  <a class="ampliar">ampliar</a>
                   <div class="text_area">
                       <textarea placeholder="Escribe tu mensaje..."></textarea>
                        <div class="botones_ampliado">
