--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -617,10 +617,11 @@
   {% for item in publications_top15 %}
   <div class="wrapper" id="pub-{{item.from_publication__id}}" data-id="{{ user.pk }}">
             <div class="box">
-            <input type="checkbox" id="check-{{item.from_publication__id}}">
-            <label for="check-{{item.from_publication__id}}" class="zoom-pub"><i class="fa fa-expand fa-lg"></i></label>
+            <!--<input type="checkbox" id="check-{{item.from_publication__id}}"> -->
+            <!-- <label for="check-{{item.from_publication__id}}" class="zoom-pub"><i class="fa fa-expand fa-lg"></i></label> -->
+            <span id="check-{{item.from_publication__id}}" class="zoom-pub"><i class="fa fa-expand fa-lg"></i></span>
             <!-- Check para ampliar el mensaje... -->
-                  <div class="ampliado">
+                  <div class="ampliado" id="expand-{{item.from_publication__id}}">
                       <div class="nombre_image">
                       <ul>
                       <li><i class="first">{{item.user__first_name}} {{item.user__last_name}}</i></li>
@@ -637,7 +638,6 @@
                     <a target="_blank">{{item.from_publication__created}}</a><br><br>
                     {{ item.from_publication__content | safe }}
                   </div>
-                  <a class="ampliar">ampliar</a>
                   <div class="text_area">
                       <textarea placeholder="Escribe tu mensaje..."></textarea>
                        <div class="botones_ampliado">
@@ -649,7 +649,6 @@
 
                   </div>
                   </div>
-
       <div class="image">
         {% if item.user__profile__image and item.user__profile__image|file_exists %}
         <img src="{{MEDIA_URL}}{{item.user__profile__image}}" alt="img" class="usr-img img-responsive"><!-- id es avatar-publication-->
